--- a/src/app/auth-form/auth-form.component.scss
+++ b/src/app/auth-form/auth-form.component.scss
@@ -18,7 +18,6 @@
       max-width: 298px;
       margin-top: 56px;
     }
-   
   }
 
   &__desc {
@@ -137,6 +136,7 @@
     font-weight: 500;
     line-height: 20px;
     background: var(--primary-color);
+
     @include mobile {
       padding: 12px 135px;
     }
@@ -154,6 +154,10 @@
       line-height: 20px;
       border-radius: 8px;
       border: 1px solid #d0d5dd;
+      transition: 0.2s ease-in-out;
+      &:hover {
+        border-color: var(--primary-color);
+      }
       @include mobile {
         padding: 10px 70px;
       }
