--- a/src/app/auth-form/auth-form.component.html
+++ b/src/app/auth-form/auth-form.component.html
@@ -27,7 +27,7 @@
     <a href="/" class="auth-form__forgot">Forgot Password?</a>
   </div>
   <div class="auth-form__buttons">
-    <a href="/" class="btn">Sign in</a>
+    <a href="https://www.youtube.com/watch?v=HIcSWuKMwOw&t=6s" class="btn">Sign in</a>
     <a href="/" class="btn_primary">
       <img src="assets/google.svg" alt="" />Sign in with Google</a>
     <div class="auth-form__text">
