--- a/src/app/auth-form/auth-form.component.scss
+++ b/src/app/auth-form/auth-form.component.scss
@@ -69,34 +69,38 @@
       align-items: center;
     }
   }
+
   .custom-checkbox {
     position: absolute;
     opacity: 0;
+    cursor: pointer;
   }
-  custom-checkbox + label {
+
+  .custom-checkbox + label {
     display: inline-flex;
     align-items: center;
-    user-select: none;
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 16px;
+      height: 16px;
+      border: 1px solid var(--c-border);
+      border-radius: 4px;
+      margin-right: 8px;
+    }
   }
-  .custom-checkbox + label::before {
-    content: "";
-    display: inline-block;
-    width: 16px;
-    text-align: center;
-    height: 16px;
-    border: 1px solid #d0d5dd;
-    border-radius: 4px;
-    margin-right: 8px;
+
+  .custom-checkbox:checked + label {
+    &::before {
+      content: "\2714";
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      background-color: var(--primary-color);
+    }
   }
-  .custom-checkbox:checked + label::before {
-    content: "\2714";
-    color: white;
-    display: flex;
-    align-items: center;
-    padding-left: 1px;
-    border: 1px solid #d0d5dd;
-    background-color: #d0d5dd;
-  }
+
   &__forgot {
     color: var(--primary-color);
     font-size: 14px;
@@ -118,6 +122,7 @@
     line-height: 24px;
     text-align: center;
     max-width: 360px;
+
     a {
       color: var(--primary-color);
       font-family: Inter;
@@ -153,7 +158,7 @@
       font-weight: 500;
       line-height: 20px;
       border-radius: 8px;
-      border: 1px solid #d0d5dd;
+      border: 1px solid var(--c-border);
       transition: 0.2s ease-in-out;
       &:hover {
         border-color: var(--primary-color);
@@ -170,7 +175,7 @@
     padding: 10px 14px;
     border-radius: 8px;
     margin-bottom: 20px;
-    border: 1px solid #d0d5dd;
+    border: 1px solid var(--c-border);
     transition: 0.2s ease-in;
     &::placeholder {
       color: var(--gray);
