--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,8 +1,77 @@
+@import "mixins";
 html,
 body {
   font-family: var(--ff);
 }
 
-body{
+body {
   background: #413f3f;
+}
+
+.form-group {
+  display: flex;
+  align-items: center;
+  padding: 10px 14px;
+  border-radius: 8px;
+  margin-bottom: 20px;
+  border: 1px solid var(--c-border);
+  transition: 0.2s ease-in;
+  &::placeholder {
+    color: var(--gray);
+  }
+  &:hover {
+    border-color: var(--primary-color);
+  }
+  i {
+    color: #667085;
+  }
+  input {
+    padding-right: 10px;
+    flex: 1;
+    border: 0;
+    outline: 0;
+  }
+  .eyeicon {
+    cursor: pointer;
+    margin: 0;
+  }
+}
+span {
+  margin: 0;
+}
+
+.btn {
+  padding: 12px 154px;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  background: var(--primary-color);
+
+  @include mobile {
+    padding: 12px 135px;
+  }
+  &_primary {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    padding: 10px 90px;
+    color: var(--secondary-color);
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+    border-radius: 8px;
+    border: 1px solid var(--c-border);
+    transition: 0.2s ease-in-out;
+    &:hover {
+      border-color: var(--primary-color);
+    }
+    @include mobile {
+      padding: 10px 70px;
+    }
+  }
 }
